test/files/neg/qualifying-class-error-2.check
qualifying-class-error-2.scala:9: error: A is not an enclosing class
    protected[A] def f() {}
                     ^
one error found
